Bug 156116 - when renamed, object name does not update in accessibility check sidebar
Summary: when renamed, object name does not update in accessibility check sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-01 15:18 UTC by stragu
Modified: 2023-09-14 15:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample ODT (100.58 KB, application/vnd.oasis.opendocument.text)
2023-07-01 15:18 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-07-01 15:18:59 UTC
Created attachment 188148 [details]
sample ODT

Steps to reproduce:
1. Open attachment in Writer
2. Rename Image3 in Navigator
3. Switch to Accessibility Check sidebar deck

Results: name of object isn't updated. A save and reload is necessary to see the change.

Expected: name updated directly.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c5bd661dc032ed8f664b0eac47f246d4d51b4d2c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Samuel Mehrbrodt 2023-07-03 06:33:36 UTC
Confirmed (at least when the a11y sidebar deck has been opened before).
Comment 2 Commit Notification 2023-08-23 10:40:19 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/069569e4a095f2fe42e94c2dad15356e2038727a

tdf#156116 - A11Y - fix object name does not update in accessibility sidebar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-08-24 09:05:48 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f53f7228fc77ac5d2579c9039220d53b4d8443a2

tdf#156116 - A11Y - fix object name does not update in accessibility sidebar

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-08-30 10:13:44 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bac847ded67941c6db21a2f041a0b9dad9d2b0bd

Related tdf#156116 - A11Y - show only one warning/textframes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-03 15:15:58 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4b2f1a58a888855a03a3d4d5c2104350e05b1a9

Related tdf#156116 - A11Y - fix goto textframes after renaming object

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-09-14 15:56:10 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7996e179d8ffc8b1e08d319884552557b1901e93

Related tdf#156116 - A11Y - show only one warning/textframes

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-09-14 15:56:12 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/42dd4a49deaaefe9a439b9f4b465a6991ff55da2

Related tdf#156116 - A11Y - fix goto textframes after renaming object

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.