tdf#156116 - A11Y - fix object name does not update in accessibility sidebar

when we modify the name on the Navigator sidebar.
Update the related accessibility issue after we modify the name on the sidebar.

Change-Id: I8f4b8780ff1ffe7cfb86ff837c9579d6b785b832
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155904
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
(cherry picked from commit 069569e4a095f2fe42e94c2dad15356e2038727a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155925
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>