sw/source/core/txtnode/OnlineAccessibilityCheck.cxx
@@ -79,12 +79,15 @@ OnlineAccessibilityCheck::OnlineAccessibilityCheck(SwDoc& rDocument)
 {
 }
 
-void OnlineAccessibilityCheck::updateNodeStatus(SwNode* pNode)
+void OnlineAccessibilityCheck::updateNodeStatus(SwNode* pNode, bool bIssueObjectNameChanged)
 {
     if (!pNode->IsContentNode() && !pNode->IsTableNode())
         return;
 
     m_nAccessibilityIssues = 0;
+
+    if (bIssueObjectNameChanged)
+        return;
 
     auto it = m_aNodes.find(pNode);
     if (it == m_aNodes.end())
@@ -292,7 +295,7 @@ void OnlineAccessibilityCheck::clearAccessibilityIssuesFromAllNodes()
     updateStatusbar();
 }
 
-void OnlineAccessibilityCheck::resetAndQueue(SwNode* pNode)
+void OnlineAccessibilityCheck::resetAndQueue(SwNode* pNode, bool bIssueObjectNameChanged)
 {
     if (utl::ConfigManager::IsFuzzing())
         return;
@@ -305,7 +308,7 @@ void OnlineAccessibilityCheck::resetAndQueue(SwNode* pNode)
     pNode->getAccessibilityCheckStatus().reset();
     m_aNodes.erase(pNode);
     runAccessibilityCheck(pNode);
-    updateNodeStatus(pNode);
+    updateNodeStatus(pNode, bIssueObjectNameChanged);
     updateStatusbar();
 }
 
